# libsimdpp_mwe

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: main.cpp
